--- a/politica.html
+++ b/politica.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Nexa:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <style>
-        /* Estilos específicos para esta página */
-        body {
-            font-family: 'Nexa', sans-serif;
-        }
-        #logo {
-            width: 100px;
-            height: 100px;
-            margin: 20px auto;
-        }
-        #header {
-            background-color: #FD7D2C;
-            text-align: center;
-            color: white;
-        }
-        #copyright {
-            background-color: #00a4a3;
-            color: white;
-        }
-    </style>
-    <title>Política de Privacidad - DescubreDo</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Términos y Condiciones - Newsletter</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f2f2f2;
+  }
+  .container {
+    max-width: 800px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  h1 {
+    text-align: center;
+  }
+  p {
+    line-height: 1.6;
+    margin-bottom: 15px;
+  }
+</style>
 </head>
 <body>
-    <div id="header">
-        <img src="img/LogoDescrubre.png" alt="LogoBlanco" id="logo">
-        <h1>Política de Privacidad</h1>
-        <div>
-            <p>La privacidad y seguridad de tus datos personales son de suma importancia para nosotros. Nos comprometemos a recopilar, almacenar y procesar tus datos de manera responsable y en conformidad con las leyes de protección de datos aplicables, con el objetivo de garantizar su confidencialidad e integridad.</p>
-        </div>
-    </div>
-    <div id="copyright">
-        <div class="copyright-item">
-            <p>&copy; 2023 &bull; ©Descubre DO &bull; Todos los derechos reservados</p>
-        </div>
-        <div class="copyright-item">
-            <i class="far fa-envelope"></i> <span>hola@descubre.do</span>
-        </div>
-        <div class="copyright-item">
-            <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/descubre.do/" target="_blank">descubre.do</a>
-        </div>
-    </div>
+<div class="container">
+  <h1>Términos y Condiciones</h1>
+  <p>Por favor, lea detenidamente estos términos y condiciones antes de suscribirse a nuestro newsletter.</p>
+  
+  <h2>1. Información Personal</h2>
+  <p>La información personal que usted proporcione al suscribirse a nuestro newsletter, como su nombre y dirección de correo electrónico, será utilizada únicamente con el propósito de enviarle nuestro newsletter.</p>
+  
+  <h2>2. Uso de la Información</h2>
+  <p>No compartiremos, venderemos ni alquilaremos su información personal a terceros sin su consentimiento explícito. Su privacidad es importante para nosotros y nos comprometemos a proteger su información personal de manera adecuada.</p>
+  
+  <h2>3. Cancelación de la Suscripción</h2>
+  <p>Usted puede cancelar su suscripción a nuestro newsletter en cualquier momento utilizando el enlace de cancelación de suscripción proporcionado en cada correo electrónico.</p>
+  
+  <h2>4. Modificaciones</h2>
+  <p>Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento. Es su responsabilidad revisar periódicamente los términos y condiciones para estar al tanto de las actualizaciones.</p>
+  
+  <p>Última actualización: Febrero 2024</p>
+</div>
 </body>
 </html>
