--- a/politica.html
+++ b/politica.html
@@ -37,13 +37,13 @@
   <h1>Términos y Condiciones</h1>
   <p>Por favor, lea detenidamente estos términos y condiciones antes de suscribirse a nuestro newsletter.</p>
   
-  <h2>1. Información Personal</h2>
+  <h2>1. Información personal</h2>
   <p>La información personal que usted proporcione al suscribirse a nuestro newsletter, como su nombre y dirección de correo electrónico, será utilizada únicamente con el propósito de enviarle nuestro newsletter.</p>
   
-  <h2>2. Uso de la Información</h2>
-  <p>No compartiremos, venderemos ni alquilaremos su información personal a terceros sin su consentimiento explícito. Su privacidad es importante para nosotros y nos comprometemos a proteger su información personal de manera adecuada.</p>
+  <h2>2. Uso de la información</h2>
+  <p>No compartiremos, venderemos ni alquilaremos su información personal a terceros. Su privacidad es importante para nosotros y nos comprometemos a proteger su información personal de manera adecuada.</p>
   
-  <h2>3. Cancelación de la Suscripción</h2>
+  <h2>3. Cancelación de la suscripción</h2>
   <p>Usted puede cancelar su suscripción a nuestro newsletter en cualquier momento utilizando el enlace de cancelación de suscripción proporcionado en cada correo electrónico.</p>
   
   <h2>4. Modificaciones</h2>
