--- a/politica.html
+++ b/politica.html
@@ -22,6 +22,8 @@
     border-radius: 5px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-top: 20px; /* Ajusta el margen superior según sea necesario */
+    overflow-y: auto; /* Agrega una barra de desplazamiento vertical si es necesario */
   }
   h1 {
     text-align: center;
