--- a/politica.html
+++ b/politica.html
@@ -27,6 +27,7 @@
   }
   h1 {
     text-align: center;
+    margin-top: 0; /* Añade un margen superior cero para el h1 */
   }
   p {
     line-height: 1.6;
@@ -36,7 +37,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>Términos y Condiciones</h1>
+  <h1>Términos y Condiciones - Newsletter</h1>
   <p>Por favor, lea detenidamente estos términos y condiciones antes de suscribirse a nuestro newsletter.</p>
   
   <h2>1. Información personal</h2>
