--- a/politica.html
+++ b/politica.html
@@ -27,7 +27,7 @@
   }
   h1 {
     text-align: center;
-    margin-top: 0; /* Añade un margen superior cero para el h1 */
+    margin-top: 15px; /* Añade un margen superior cero para el h1 */
   }
   p {
     line-height: 1.6;
