--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
     <div id="copyrigh">
         <div class="copyrigh-item paLaIzquierda">
-            <a href="politica.html" target="_blank">Terminos y Condiciones</a>
+            <a href="politica.html" target="_blank">Términos y Condiciones</a>
         </div>
         <div class="copyrigh-item paLaIzquierda">
             <p style="color: #fff;">&copy; 2024 &bull; ©Descubre DO</p>
