--- a/politica.html
+++ b/politica.html
@@ -27,18 +27,22 @@
   }
   h1 {
     text-align: center;
-    margin-top: 30px; /* Añade un margen superior cero para el h1 */
   }
   p {
     line-height: 1.6;
     margin-bottom: 15px;
   }
+
+  @media screen and (max-width: 768px) {
+    h1 {
+        margin-top: 50px; /* Añade un margen superior cero para el h1 */
+    }
+  }
 </style>
 </head>
 <body>
 <div class="container">
-    <br>
-  <h1>Términos y Condiciones - Newsletter</h1>
+  <h1>Términos y Condiciones</h1>
   <p>Por favor, lea detenidamente estos términos y condiciones antes de suscribirse a nuestro newsletter.</p>
   
   <h2>1. Información personal</h2>
