--- a/index.html
+++ b/index.html
@@ -319,6 +319,11 @@
         }
     }
     </style>
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-5QSR42VZRQ"></script> 
+    <script> window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);} gtag('js', new Date());
+        gtag('config', 'G-5QSR42VZRQ');
+    </script>
 </head>
 <body>
     <header>
